# eval-track

./: .gitignore  LICENSE  README.md  compose.yml  mkdocs.yml  taskfile.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml  docs.yml  pr-checks.yml  pr.yml
core/: pyproject.toml  schema.prisma
core/core/: session.py
docs/: client.md  index.md  infrastructure.md  router.md  tracer.md
docs/examples/: advanced-fastapi-usage.md  api-orchestration.md  fastapi-injection.md  go-http-usage.md  rust-actix-usage.md  typescript-express-usage.md
example/: pyproject.toml  taskfile.yml
example/advanced-fastapi-usage/: README.md  main.py
example/api-orchestration/: README.md  compose.yml  main.py  pyproject.toml
example/fastapi-app-injection/: README.md  main.py  pyproject.toml
server/: pyproject.toml
tracker/: .dockerignore  compose.yml  main.py  pyproject.toml
tracker-go/: README.md  go.mod  go.sum  taskfile.yml
tracker-go/pkg/client/: client.go  client_test.go  decorator.go  decorator_test.go
tracker-go/pkg/trace/: trace.go
tracker-py/: Dockerfile  Dockerfile.test  README.md  compose.yml  pyproject.toml  taskfile.yml
tracker-py/tests/: check_deps.py  conftest.py  test_api.py  test_client.py  test_db.py  test_entity.py  test_storage.py  test_tracer.py
tracker-py/tests/integration/: __init__.py  test_s3_integration.py
tracker-py/tracker/: __init__.py  client.py  decorator.py  main.py  middleware.py  router.py  settings.py
tracker-py/tracker/integrations/: fastapi.py
tracker-py/tracker/storage/: s3.py  storage.py
tracker-rs/: Cargo.toml  README.md  taskfile.yml
tracker-rs/capture-response-macro/: Cargo.toml
tracker-rs/capture-response-macro/src/: lib.rs
tracker-rs/src/: client.rs  error.rs  lib.rs  types.rs
tracker-rs/tests/: client_test.rs  decorator_test.rs  integration_test.rs
tracker-ts/: README.md  biome.json  package.json  pnpm-lock.yaml  taskfile.yml  tsconfig.json
tracker-ts/__tests__/: index.test.ts
tracker-ts/src/: client.ts  index.ts  types.ts
tracker/tests/: test_client.py  test_entity.py  test_middleware.py  test_tracer.py
tracker/tracker/: api.py  client.py  db.py  entity.py  kv.py  logging_config.py  middleware.py  prisma_store.py  router.py  settings.py  storage.py  trace.py  tracer.py
tracker/tracker/storage/: __init__.py  s3.py  storage.py
tracker/ts-tracer/: biome.json  package.json  pnpm-lock.yaml  tsconfig.json
tracker/ts-tracer/__tests__/: index.test.ts
tracker/ts-tracer/src/: client.ts  index.ts  types.ts
ts-tracker/__tests__/: index.test.ts
ts-tracker/src/: client.ts
web/: .gitignore  Dockerfile  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  taskfile.yml
web/db/: initdb.sql
web/prisma/: schema.prisma
web/prisma/migrations/20250102085556_init_db/: migration.sql
web/prisma/migrations/20250103034958_init_db/: migration.sql
web/src/: const.ts
web/src/app/: global.css  layout.tsx  page.tsx
web/src/app/api/[[...route]]/: route.ts  traces.ts
web/src/app/api/[[...route]]/middlewares/: index.ts  trackind-key-middleware.ts  tracking-id-middleware.ts
web/src/app/api/inngest/: functions.ts  route.ts
web/src/app/traces/: page.tsx  trace-data-table.tsx
web/src/components/: AdminApp.tsx  app-sidebar.tsx  dashboard-bar-chart.tsx
web/src/utils/: auth-client.ts  auth.ts  hono.ts  storage-client.ts
web/src/utils/inngest/: client.ts
web/src/utils/storage/: base.ts  in-memory.ts  s3.ts
web/src/worker/: add-trace.ts  analyze-artifact.ts  health.ts  index.ts
