[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prisma>=0.15.0",
]

[tool.mypy]
python_version = "3.11"
show_error_context = true
show_column_numbers = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = ["build/*"]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "C9",
    "E",
    "F",
    "W",
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
