[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["tracker", "uvicorn>=0.34.0"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.1",
    "ruff>=0.8.4",
]

[tool.uv.sources]
tracker = { path = "../tracker-py", editable = true }
