[workspace]
members = [
    ".",
    "capture-response-macro"
]

[package]
name = "eval_track_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
ulid = "1.1"
chrono = { version = "0.4", features = ["serde"] }
capture-response-macro = { path = "./capture-response-macro" }
once_cell = "1.19"

[dev-dependencies]
mockall = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.5"
async-trait = "0.1"

[features]
default = []
integration-tests = []
