[project]
name = "tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.0",
    "python-ulid[pydantic]>=3.0.0",
    "uvicorn>=0.34.0",
    "core @ file:/home/runner/work/eval-track/eval-track/core"
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.0",
    "ruff>=0.8.4",
]

[tool.mypy]
python_version = "3.11"
show_error_context = true
show_column_numbers = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = []
plugins = ['pydantic.mypy']


[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
  "C9",
  "E",
  "F",
  "W",
  "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
